# HelpDeskAI

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  agent.md  docker-compose.yml  phase5.db  pyproject.toml  techqa_documents.jsonl
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FINOPS.md  Sujet_HelpDeskAI_FilRouge.md  agent_graph.mmd  agents_langgraph_vs_crewai.md  mcp_tools.md
docs/corpus_preparation/: chunking_benchmark.json  chunking_benchmark.md  corpus_quality_report.html  corpus_quality_summary.json
docs/presentation/: helpdeskai_soutenance.md  logs_traces_examples.md
helpdeskai/: __init__.py  phase3.py  requirements.txt
helpdeskai/agents/: __init__.py  config.py  mcp_workflow.py  support_agent  support_agent.py  workflow.py
helpdeskai/common/: __init__.py  logging.py
helpdeskai/corpus/: __init__.py  analysis.py  benchmark.py  chunking.py  config.py  datasets.py  downloader.py  io_utils.py  transforms.py
helpdeskai/indexing/: __init__.py  config.py  embeddings.py  io_utils.py  models.py  pipeline.py  qdrant_store.py  workflow.py
helpdeskai/ingestion/: __init__.py  chunk.py  chunking.py  config.py  dedup.py  enrich.py  exceptions.py  extract.py  golden.py  io.py  io_utils.py  normalize.py  persist.py  pipeline.py  quality.py  workflow.py
helpdeskai/mcp_servers/: __init__.py  client.py  crm.py  fake_crm.py  knoweldge.py  knowledge.py  security.py
helpdeskai/observability/: __init__.py  config.py  continuous_eval.py  finops.py  io_utils.py  mlflow_model.py  mlflow_tracking.py  prompt_registry.py  workflow.py
helpdeskai/rag/: __init__.py  config.py  evaluation.py  llm.py  models.py  pipeline.py  prompts.py  rerank.py  workflow.py
helpdeskai/retrieval/: __init__.py  config.py  corpus.py  embeddings.py  fusion.py  indexer.py  io_utils.py  models.py  search.py  sparse.py  workflow.py
helpdeskai/testVTALL/: _setup.py  download_corpus_V2.py  main.py  (+1 more)
scripts/: README.md  _init.py  _setup.py  analyze_corpus.py  benchmark_retrieval.py  compare_chunking.py  continuous_eval.py  demo_agent_mcp.py  demo_streamlit.py  detect_eval_drift.py  download_corpus.py  download_corpus_V2.py  evaluate_rag.py  finops_dashboard.py  generate_corpus_quality_report.py  index_retrieval.py  list_mcp_tools.py  main.py  prepare_corpus.py  register_prompts.py  register_rag_model.py  requirements.txt  run_agent.py  run_agent_langfuse.py  run_agents.py  run_indexing.py  run_ingestion.py  run_mcp.py  run_observability.py  run_rag.py  run_retrieval.py  search_rag.py  tmp_agent_console.py
tests/: test_agents_workflow.py  test_analysis_scripts.py  test_chunking.py  test_corpus_analysis.py  test_corpus_preparation_data.py  test_corpus_preparation_pipeline.py  test_download_corpus.py  test_indexing_workflow.py  test_ingestion_chunk.py  test_ingestion_pipeline.py  test_ingestion_stages.py  test_mcp_crm.py  test_mcp_knowledge.py  test_mcp_orchestration.py  test_mcp_servers.py  test_observability.py  test_observability_cli.py  test_observability_workflow.py  test_rag.py  test_rag_workflow.py  test_retrieval.py  test_retrieval_workflow.py  test_support_agent.py  test_techqa_ingestion.py
(+8 files in other folders)
