[project]
name = "helpdeskai"
version = "0.1.0"
description = "Assistant de support N1 augmente par RAG et agents"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "datasets>=3.0",
    "evidently>=0.6",
    "huggingface-hub>=0.27",
    "httpx>=0.27",
    "langchain>=0.3",
    "langgraph>=0.2",
    "mlflow>=2.18",
    "pandas>=2.2",
    "prefect>=3.0",
    "pydantic>=2.10",
    "qdrant-client>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

